miniextendr-macros/tests/ui/derive_dataframe_enum_nested_enum_b1_custom_tag_sibling.stderr
error[E0080]: evaluation panicked: DataFrameRow B1 sibling-collision: a sibling field in the outer enum produces a column name that collides with the discriminant column emitted by a nested inner enum. Rename the sibling field or use `#[dataframe(tag = "...")]` on the inner enum to choose a different discriminant column name.
  --> tests/ui/derive_dataframe_enum_nested_enum_b1_custom_tag_sibling.rs:20:10
   |
20 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ evaluation of `_` failed inside this call
   |
note: inside `miniextendr_api::markers::assert_no_sibling_field_collision`
  --> $RUST/core/src/panic.rs
   |
   = note: the failure occurred here
   |
  ::: $WORKSPACE/miniextendr-api/src/markers.rs
   |
   | /                 panic!(
   | |                     "DataFrameRow B1 sibling-collision: a sibling field in the outer enum \
   | |                      produces a column name that collides with the discriminant column emitted \
   | |                      by a nested inner enum. Rename the sibling field or use \
   | |                      `#[dataframe(tag = \"...\")]` on the inner enum to choose a different \
   | |                      discriminant column name."
   | |                 );
   | |_________________- in this macro invocation
